--- a/Server/App.config
+++ b/Server/App.config
@@ -4,7 +4,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <connectionStrings>
-    <add name="oft-office-db" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Products;Integrated Security=True;" />
+    <add name="OfficeDatabase" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=oft-office-db;Integrated Security=True;" />
   </connectionStrings>
   <appSettings>
     <add key="port" value="9999" />
