--- a/Server/App.config
+++ b/Server/App.config
@@ -4,7 +4,9 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <connectionStrings>
-    <add name="OfficeDatabase" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=oft-office-db;Integrated Security=True;" />
+    <!--<add name="OfficeDatabase" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=oft-office-db;Integrated Security=True;" />-->
+    <add name="OfficeDatabase" connectionString="    Data Source=HP_250_G6\SQLEXPRESS;Initial Catalog=oft-office-db;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False
+" />
   </connectionStrings>
   <appSettings>
     <add key="port" value="9999" />
