--- a/SystemOperations/SistemskeOperacije.csproj
+++ b/SystemOperations/SistemskeOperacije.csproj
@@ -44,6 +44,8 @@
     <Compile Include="OpstaSO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserSO\LoginSO.cs" />
+    <Compile Include="VratiSveSlozenSO.cs" />
+    <Compile Include="VratiSve.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BrokerBazePodataka\BrokerBazePodataka.csproj">
