--- a/Domen/Domen.csproj
+++ b/Domen/Domen.csproj
@@ -47,7 +47,9 @@
     <Compile Include="Pacijent.cs" />
     <Compile Include="Pregled.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Exceptions\ServerException.cs" />
     <Compile Include="StavkaPregleda.cs" />
+    <Compile Include="Exceptions\SystemOperationException.cs" />
     <Compile Include="Tipintervencije.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
