--- a/SystemOperations/SistemskeOperacije.csproj
+++ b/SystemOperations/SistemskeOperacije.csproj
@@ -41,9 +41,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LekarSO\DeleteDoctorSO.cs" />
+    <Compile Include="PacijentSO\DeletePacientSO.cs" />
+    <Compile Include="LekarSO\SaveDoctorSO.cs" />
     <Compile Include="OpstaSO.cs" />
+    <Compile Include="FilterSO.cs" />
+    <Compile Include="PregledSO\DeleteExaminSO.cs" />
+    <Compile Include="PregledSO\SaveExaminSO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PacijentSO\SavePacientSO.cs" />
     <Compile Include="UserSO\LoginSO.cs" />
+    <Compile Include="UserSO\RegisterSO.cs" />
     <Compile Include="VratiSveSlozenSO.cs" />
     <Compile Include="VratiSve.cs" />
   </ItemGroup>
@@ -57,9 +65,6 @@
       <Name>Domen</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="LekarSO\" />
-    <Folder Include="PacijentSO\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
