--- a/View/View.csproj
+++ b/View/View.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Communication\Communication.cs" />
     <Compile Include="Communication\CommunicationClient.cs" />
+    <Compile Include="Controller\Dialog\DialogController.cs" />
     <Compile Include="Controller\Pacient\AllPacientsController.cs" />
     <Compile Include="Controller\User\LoginController.cs" />
     <Compile Include="Controller\Doctor\DoctorController.cs" />
@@ -55,9 +56,7 @@
     <Compile Include="Controller\Examin\ExaminController.cs" />
     <Compile Include="Controller\Examin\AllExaminController.cs" />
     <Compile Include="Controller\Main\MainController.cs" />
-    <Compile Include="Controller\Pacient\PacijentController.cs" />
-    <Compile Include="Exceptions\ServerException.cs" />
-    <Compile Include="Exceptions\SystemOperationException.cs" />
+    <Compile Include="Controller\Pacient\PacientController.cs" />
     <Compile Include="FrmMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,11 +69,29 @@
     <Compile Include="FrmLogin.Designer.cs">
       <DependentUpon>FrmLogin.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmRegister.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmRegister.Designer.cs">
+      <DependentUpon>FrmRegister.cs</DependentUpon>
+    </Compile>
     <Compile Include="Helpers\UserControlHelpers.cs" />
     <Compile Include="MainCoordinator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Dialogs\FrmDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Dialogs\FrmDialog.Designer.cs">
+      <DependentUpon>FrmDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\mode\UCMode.cs" />
+    <Compile Include="UserControls\UCHome.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\UCHome.Designer.cs">
+      <DependentUpon>UCHome.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\UCLekar.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -111,18 +128,15 @@
     <Compile Include="UserControls\UCPregledi.Designer.cs">
       <DependentUpon>UCPregledi.cs</DependentUpon>
     </Compile>
-    <Compile Include="UserControls\UCPretragaPacijenata.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="UserControls\UCPretragaPacijenata.Designer.cs">
-      <DependentUpon>UCPretragaPacijenata.cs</DependentUpon>
-    </Compile>
     <Compile Include="Util\ListConverter.cs" />
     <EmbeddedResource Include="FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmLogin.resx">
       <DependentUpon>FrmLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmRegister.resx">
+      <DependentUpon>FrmRegister.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -133,6 +147,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Dialogs\FrmDialog.resx">
+      <DependentUpon>FrmDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserControls\UCHome.resx">
+      <DependentUpon>UCHome.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UserControls\UCLekar.resx">
       <DependentUpon>UCLekar.cs</DependentUpon>
     </EmbeddedResource>
@@ -150,9 +170,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UserControls\UCPregledi.resx">
       <DependentUpon>UCPregledi.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="UserControls\UCPretragaPacijenata.resx">
-      <DependentUpon>UCPretragaPacijenata.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -180,8 +197,6 @@
       <Name>Transfer</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Dialogs\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
