--- a/Server/App.config
+++ b/Server/App.config
@@ -5,7 +5,7 @@
   </startup>
   <connectionStrings>
     <!--<add name="OfficeDatabase" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=oft-office-db;Integrated Security=True;" />-->
-    <add name="OfficeDatabase" connectionString="    Data Source=HP_250_G6\SQLEXPRESS;Initial Catalog=oft-office-db;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False
+    <add name="OfficeDatabase" connectionString="    Data Source=localhost\SQLEXPRESS;Initial Catalog=oft-office-db;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False
 " />
   </connectionStrings>
   <appSettings>
